css/hubspot.css
/* ---------- HUBSPOT FORMS ---------- */
/** hs-form-field hs_submit **/

.hs-form-field {
    padding-bottom: 20px;
    width: 100%;
    color: #fff;
}

.hs-input {
    width: 100%;
    color: #555;
    background-color: #fff;
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 4px;
    height: 40px;
    padding: 10px;
}

.hs-button {
    color: #fff;
    background-color: #d1541a;
    border-color: #d1541a;
    text-transform: uppercase;
    font-weight: 700;
    border-radius: 6px;
    font-size: 14px;
    padding: 25px 50px;
    width: 100%;
    display: inline-block;
    margin-bottom: 0;
    line-height: 1.42857143;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    cursor: pointer;
    background-image: none;
    border: 1px solid transparent;
}

.hs-button:hover,
.hs-button:focus,
.hs-button:active,
.hs-button.active {
    color: #333;
    background-color: #e7e7e7;
    text-decoration: none;
}

.hbspt-form {
    margin-top: 25px;
}

.hbspt-form div.submitted-message {
    color: #fff;
}

/* Contact form for free trial */
.hbspt-form ul {
    list-style-type: none;
    padding-left: 10px;
    margin-bottom: 0;
}

.hbspt-form ul li {
    display: inline;
}

.hbspt-form ul label {
    margin-bottom: 0;
}

.hbspt-form .hs-form-radio-display input[type="radio"],
.hbspt-form .hs-form-booleancheckbox input[type="checkbox"] {
    clear: none;
    float: left;
}

.hbspt-form .hs-form-radio-display span {
    clear: none;
    float: left;
    padding: 13px 12px 0 8px;
}

.hbspt-form .hs-form-booleancheckbox span {
    clear: none;
    float: left;
    padding: 14px 12px 0 8px;
}

.hbspt-form .hs-form fieldset {
    margin-left: auto;
    margin-right: auto;
    max-width: none;
    width: 100%;
}

